vendor/thiserror-1.0.24/tests/ui/duplicate-transparent.stderr
error: duplicate #[error(transparent)] attribute
 --> $DIR/duplicate-transparent.rs:5:1
  |
5 | #[error(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^
