vendor/thiserror-1.0.24/tests/ui/duplicate-transparent.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error(transparent)]
#[error(transparent)]
pub struct Error(anyhow::Error);

fn main() {}
